# docker-forgery

./: .gitignore  README.md
cxx-core/debian/: Dockerfile  README.md  bash_aliases  bash_env
py-core/: .Dockerfile.swp  .README.md.swp  .init.sh  .pyproject.toml.swo  .pyproject.toml.swp  Dockerfile  README.md  bash_aliases  bash_env  local-ci.sh  pre-shippping.sh  pyproject.toml
xpylib/: Dockerfile  README.md  bash_aliases  bash_env
