[project]
name = "py-core"
version = "0.1.0"
description = "root core for python dev"
requires-python = ">=3.12"

# dependencies needed by the ci
dependencies = ["black",
      "pycodestyle",
      "pydocstyle",
      "pytest",
      "pytest-asyncio",
      "pytest-html",
      "ruff",
      "bandit",
      "sphinx",
      "furo",
      "coverage"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
